--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -108,14 +108,16 @@ shadow-ignore-shaped = false;
 #
 #################################
 
-menu-opacity = 1;
+menu-opacity = 0.8;
 inactive-opacity = 1;
 active-opacity = 1;
-frame-opacity = 1;
+frame-opacity = 0.85;
 inactive-opacity-override = false;
 alpha-step = 0.06;
 
-blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,"
+blur-kern = "3x3box";
+blur-method = "kawase";
+blur-strength = 15;
 
 # Dim inactive windows. (0.0 - 1.0)
 # inactive-dim = 0.2;
@@ -124,7 +126,7 @@ blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,"
 # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
 blur-background = true;
 # Blur background of opaque windows with transparent frames as well.
-# blur-background-frame = true;
+blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
 blur-background-fixed = true;
 blur-background-exclude = [
@@ -231,7 +233,7 @@ wintypes:
         # shadow: Give those windows shadow
         shadow = false;
         # opacity: Default opacity for the type of windows.
-        opacity = 0.85;
+        opacity = 0.75;
         # focus: Whether to always consider windows of this type focused.
         focus = true;
     };
