Blur, Transparency, Colors

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -108,10 +108,10 @@ shadow-ignore-shaped = false;
 #
 #################################
 
-menu-opacity = 0.8;
+menu-opacity = 0.7;
 inactive-opacity = 1;
 active-opacity = 1;
-frame-opacity = 0.85;
+frame-opacity = 0.7;
 inactive-opacity-override = false;
 alpha-step = 0.06;
 
@@ -130,7 +130,7 @@ blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
 blur-background-fixed = true;
 blur-background-exclude = [
-    "window_type = 'dock'",
+#    "window_type = 'dock'",
     "window_type = 'desktop'",
     "name *= 'Chromium'",
     "name *= 'Chrome'",
