--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -108,16 +108,21 @@ shadow-ignore-shaped = false;
 #
 #################################
 
-menu-opacity = 0.7;
+menu-opacity = 0.8;
 inactive-opacity = 1;
 active-opacity = 1;
-frame-opacity = 0.7;
+frame-opacity = 1;
 inactive-opacity-override = false;
 alpha-step = 0.06;
 
 blur-kern = "3x3box";
 blur-method = "kawase";
-blur-strength = 15;
+blur-strength = 12;
+
+opacity-rule = [
+      "75:class_g = 'URxvt'",
+      "75:class_g = 'Code'"
+];
 
 # Dim inactive windows. (0.0 - 1.0)
 # inactive-dim = 0.2;
