--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -140,6 +140,7 @@ blur-background-exclude = [
     "name *= 'Chromium'",
     "name *= 'Chrome'",
     "name *= 'Firefox'",
+    "class_g = 'Synapse'",
     "_GTK_FRAME_EXTENTS@:c"    
 ];
 
