--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -141,6 +141,7 @@ blur-background-exclude = [
     "name *= 'Chrome'",
     "name *= 'Firefox'",
     "class_g = 'Synapse'",
+    "class_g ?= 'Notify-osd'",    
     "_GTK_FRAME_EXTENTS@:c"    
 ];
 
