Fix Code Transparency, Cleanup menus

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -121,7 +121,8 @@ blur-strength = 12;
 
 opacity-rule = [
       "70:class_g = 'URxvt'",
-      "70:class_g = 'Code'"
+      "70:class_g = 'Code'",
+      "70:class_g = 'code-oss'"
 ];
 
 # Dim inactive windows. (0.0 - 1.0)
