--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -90,7 +90,7 @@ shadow-exclude = [
     "name *= 'Chromium'",
     "name *= 'Chrome'",
     "name *= 'Firefox'",
-    "class_g = 'Conky'",
+    "class_g = 'conky'",
     "class_g = 'Kupfer'",
     "class_g = 'Synapse'",
     "class_g ?= 'Notify-osd'",
@@ -140,6 +140,7 @@ blur-background-exclude = [
     "name *= 'Chromium'",
     "name *= 'Chrome'",
     "name *= 'Firefox'",
+    "class_g = 'conky'",
     "class_g = 'Synapse'",
     "class_g ?= 'Notify-osd'",    
     "_GTK_FRAME_EXTENTS@:c"    
