--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -3,7 +3,7 @@ gtk-application-prefer-dark-theme=true
 gtk-theme-name=oomox-MyNeon
 gtk-icon-theme-name=oomox-MyNeon
 gtk-fallback-icon-theme=Numix
-gtk-font-name=FuraCode Nerd Font Mono Regular 10
+gtk-font-name=FiraCode Nerd Font Mono Regular 10
 gtk-auto-mnemonics=1
 gtk-visible-focus=automatic
 gtk-xft-antialias=1
