--- a/.config/conky/.conkyrc
+++ b/.config/conky/.conkyrc
@@ -44,7 +44,7 @@ draw_graph_borders no
 
 override_utf8_locale yes
 use_xft yes
-xftfont FuraCode Nerd Font Mono:size=10
+xftfont FiraCode Nerd Font Mono:size=10
 xftalpha 0.8
 uppercase no
 
@@ -65,42 +65,42 @@ lua_draw_hook_post main
 # CPU
 TEXT
 ${voffset 100}
-${offset 65}${font FuraCode Nerd Font Mono:bold:size=9}${color0}${alignr}${voffset 20}CPU
+${offset 65}${font FiraCode Nerd Font Mono:bold:size=9}${color0}${alignr}${voffset 20}CPU
 # Showing TOP CPU-consumers
-${offset 150}${font FuraCode Nerd Font Mono:normal:size=9}${color1}${top name 1}${alignr}${top cpu 1}%
-${offset 150}${font FuraCode Nerd Font Mono:normal:size=9}${color1}${top name 2}${alignr}${top cpu 2}%
-${offset 150}${font FuraCode Nerd Font Mono:normal:size=9}${color2}${top name 3}${alignr}${top cpu 3}%
-${offset 150}${font FuraCode Nerd Font Mono:normal:size=9}${color2}${top name 4}${alignr}${top cpu 4}%
-${offset 150}${font FuraCode Nerd Font Mono:normal:size=9}${color3}${top name 5}${alignr}${top cpu 5}%
-${offset 150}${font FuraCode Nerd Font Mono:normal:size=9}${color3}${top name 6}${alignr}${top cpu 6}%
-${offset 150}${font FuraCode Nerd Font Mono:normal:size=9}${color3}${top name 7}${alignr}${top cpu 7}%
+${offset 150}${font FiraCode Nerd Font Mono:normal:size=9}${color1}${top name 1}${alignr}${top cpu 1}%
+${offset 150}${font FiraCode Nerd Font Mono:normal:size=9}${color1}${top name 2}${alignr}${top cpu 2}%
+${offset 150}${font FiraCode Nerd Font Mono:normal:size=9}${color2}${top name 3}${alignr}${top cpu 3}%
+${offset 150}${font FiraCode Nerd Font Mono:normal:size=9}${color2}${top name 4}${alignr}${top cpu 4}%
+${offset 150}${font FiraCode Nerd Font Mono:normal:size=9}${color3}${top name 5}${alignr}${top cpu 5}%
+${offset 150}${font FiraCode Nerd Font Mono:normal:size=9}${color3}${top name 6}${alignr}${top cpu 6}%
+${offset 150}${font FiraCode Nerd Font Mono:normal:size=9}${color3}${top name 7}${alignr}${top cpu 7}%
 # Showing CPU Graph
 ${voffset 10}${offset 150}${cpugraph 20,193 666666 68364B}
 
 #Showing memory part with TOP 5
 ${voffset 45}
-${goto 225}${font FuraCode Nerd Font Mono:normal:size=8}${memmax}
+${goto 225}${font FiraCode Nerd Font Mono:normal:size=8}${memmax}
 ${voffset -27}
-${offset 140}${font FuraCode Nerd Font Mono:bold:size=9}${color0}${alignr}MEM
-${offset 150}${font FuraCode Nerd Font Mono:normal:size=8}${color1}${top_mem name 1}${alignr}${top_mem mem_res 1}
-${offset 150}${font FuraCode Nerd Font Mono:normal:size=8}${color2}${top_mem name 2}${alignr}${top_mem mem_res 2}
-${offset 150}${font FuraCode Nerd Font Mono:normal:size=8}${color2}${top_mem name 3}${alignr}${top_mem mem_res 3}
-${offset 150}${font FuraCode Nerd Font Mono:normal:size=8}${color3}${top_mem name 4}${alignr}${top_mem mem_res 4}
-${offset 150}${font FuraCode Nerd Font Mono:normal:size=8}${color3}${top_mem name 5}${alignr}${top_mem mem_res 5}
+${offset 140}${font FiraCode Nerd Font Mono:bold:size=9}${color0}${alignr}MEM
+${offset 150}${font FiraCode Nerd Font Mono:normal:size=8}${color1}${top_mem name 1}${alignr}${top_mem mem_res 1}
+${offset 150}${font FiraCode Nerd Font Mono:normal:size=8}${color2}${top_mem name 2}${alignr}${top_mem mem_res 2}
+${offset 150}${font FiraCode Nerd Font Mono:normal:size=8}${color2}${top_mem name 3}${alignr}${top_mem mem_res 3}
+${offset 150}${font FiraCode Nerd Font Mono:normal:size=8}${color3}${top_mem name 4}${alignr}${top_mem mem_res 4}
+${offset 150}${font FiraCode Nerd Font Mono:normal:size=8}${color3}${top_mem name 5}${alignr}${top_mem mem_res 5}
 
 # Showing disk partitions: root, home and Data
 ${voffset 28}
-${offset 140}${font FuraCode Nerd Font Mono:bold:size=9}${color0}${alignr}${voffset 40}DISK
+${offset 140}${font FiraCode Nerd Font Mono:bold:size=9}${color0}${alignr}${voffset 40}DISK
 ${voffset -5}${offset 140}${diskiograph 20,193 666666 68364B}
 ${voffset -21}
-${offset 150}${font FuraCode Nerd Font Mono:normal:size=8}${color3}Free: ${font FuraCode Nerd Font Mono:normal:size=8}${fs_free /}${alignr}${font FuraCode Nerd Font Mono:normal:size=8}Used: ${font FuraCode Nerd Font Mono:normal:size=8}${fs_used /}
+${offset 150}${font FiraCode Nerd Font Mono:normal:size=8}${color3}Free: ${font FiraCode Nerd Font Mono:normal:size=8}${fs_free /}${alignr}${font FiraCode Nerd Font Mono:normal:size=8}Used: ${font FiraCode Nerd Font Mono:normal:size=8}${fs_used /}
 
 # Network data 
 ${voffset 20}
-${offset 140}${font FuraCode Nerd Font Mono:bold:size=9}${color0}${alignr}NET
-${offset 150}${color2}${font FuraCode Nerd Font Mono:normal:size=8}d/l: ${color0}${downspeed wlo1}${color2}${alignr}${totaldown wlo1} total
+${offset 140}${font FiraCode Nerd Font Mono:bold:size=9}${color0}${alignr}NET
+${offset 150}${color2}${font FiraCode Nerd Font Mono:normal:size=8}d/l: ${color0}${downspeed wlo1}${color2}${alignr}${totaldown wlo1} total
 ${offset 150}${downspeedgraph wlo1 20,193 666666 68364B -l}
-${offset 150}${color2}${font FuraCode Nerd Font Mono:normal:size=8}u/l: ${color0}${upspeed wlo1}${color2}${alignr}${totalup wlo1} total
+${offset 150}${color2}${font FiraCode Nerd Font Mono:normal:size=8}u/l: ${color0}${upspeed wlo1}${color2}${alignr}${totalup wlo1} total
 ${offset 150}${upspeedgraph wlo1 20,193 666666 68364B -l}
 
 # End
